# Raspberry-Pi-Pico-y-FPGA

./: README.md
Laboratorio 1 -  Reloj de tiempo real/: i2c_scan.py  read_time.py  set_time.py
Laboratorio 10 - Pico W como MQTT Client/: main.py.py  network_test.py  pico_mqtt_client.py
Laboratorio 12- Tiny Machine Learning/accel_data_collection/: CMakeLists.txt  accel_data.cpp
Laboratorio 12- Tiny Machine Learning/gesture_recognition/: CMakeLists.txt  main.cpp
Laboratorio 2 - Display Oled y LCD/: lcd_message.py  oled_message.py
Laboratorio 3 - Acelerometro/: accel.py
Laboratorio 4 - Matriz con acelerometro/: LABORATORIO 4.docx  falling_ball.py
Laboratorio 4 - Matriz con acelerometro/falling_ball_VHDL/: ball.vhd  ball.vhd.bak  falling_ball.asm.rpt  falling_ball.cdf  falling_ball.done  falling_ball.fit.rpt  falling_ball.fit.summary  falling_ball.flow.rpt  falling_ball.jdi  falling_ball.map.rpt  falling_ball.map.summary  falling_ball.pin  falling_ball.pof  falling_ball.qpf  falling_ball.qsf  falling_ball.qws  falling_ball.sof  falling_ball.sta.rpt
Laboratorio 4 - Matriz con acelerometro/falling_ball_VHDL/db/: falling_ball.(0).cnf.cdb  falling_ball.(0).cnf.hdb  falling_ball.amm.cdb  falling_ball.asm.qmsg  falling_ball.asm.rdb  falling_ball.cbx.xml  falling_ball.cmp.bpm  falling_ball.cmp.cdb  falling_ball.cmp.hdb  falling_ball.cmp.kpt  falling_ball.cmp.rdb  falling_ball.cmp0.ddb  falling_ball.cmp_merge.kpt  falling_ball.db_info  falling_ball.fit.qmsg  falling_ball.hier_info  falling_ball.hif  (+21 more)
Laboratorio 6 - Termometro con display de siete segmentos/: therm_display.py  thermistor.py
Laboratorio 6 - Termometro con display de siete segmentos/therm_display_VHDL/: Therm.asm.rpt  Therm.cdf  Therm.done  Therm.fit.rpt  Therm.fit.summary  Therm.flow.rpt  Therm.jdi  Therm.map.rpt  Therm.map.summary  Therm.pin  Therm.pof  Therm.qpf  Therm.qsf  Therm.sof  Therm.sta.rpt  Thermistor.vhd  Thermistor.vhd.bak
Laboratorio 7 - barra de volumen LCD/: volume_bar.py  volume_bar_mem.py
Laboratorio 7 - barra de volumen LCD/volume_bar_VHDL/: volume.asm.rpt  volume.cdf  volume.done  volume.fit.rpt  volume.fit.summary  volume.flow.rpt  volume.jdi  volume.map.rpt  volume.map.summary  volume.pin  volume.pof  volume.qpf  volume.qsf  volume.qws  volume.sof  volume.sta.rpt  volume_bar.vhd  volume_bar.vhd.bak
Laboratorio 8 - UART y desplazamiento de texto en la matriz de leds/: send_word_uart.py
Laboratorio 8 - UART y desplazamiento de texto en la matriz de leds/led_matrix_uart_VHDL/: led_matrix_uart.asm.rpt  led_matrix_uart.done  led_matrix_uart.fit.rpt  led_matrix_uart.fit.summary  led_matrix_uart.flow.rpt  led_matrix_uart.jdi  led_matrix_uart.map.rpt  led_matrix_uart.map.summary  led_matrix_uart.pin  led_matrix_uart.pof  led_matrix_uart.qpf  led_matrix_uart.qsf  led_matrix_uart.qws  led_matrix_uart.sof  led_matrix_uart.sta.rpt  leds.vhd  leds.vhd.bak  top.vhd  top.vhd.bak  uart.vhd  uart.vhd.bak
Laboratorio 9 - Servo, PWM en RP Pico y FPGA/: servo.py
Laboratorio 9 - Servo, PWM en RP Pico y FPGA/pwm_VHDL/: pwm.asm.rpt  pwm.cdf  pwm.done  pwm.fit.rpt  pwm.fit.summary  pwm.flow.rpt  pwm.jdi  pwm.map.rpt  pwm.map.summary  pwm.pin  pwm.pof  pwm.qpf  pwm.qsf  pwm.qws  pwm.sof  pwm.sta.rpt  pwm.vhd  pwm.vhd.bak
Laboratorio 9 - Servo, PWM en RP Pico y FPGA/servo_VHDL/: servo.asm.rpt  servo.done  servo.fit.rpt  servo.fit.summary  servo.flow.rpt  servo.jdi  servo.map.rpt  servo.map.summary  servo.pin  servo.pof  servo.qpf  servo.qsf  servo.qws  servo.sof  servo.sta.rpt  servo.vhd  servo.vhd.bak
(+325 files in other folders)
